--- a/src/css/home.css
+++ b/src/css/home.css
@@ -4,6 +4,49 @@ body {
     padding : 0;
     margin : 0;
     font-family: 'Noto Sans' , sans-serif;
+    background-color: rgb(235, 232, 232);
 
 }
+
+header {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+table {
+    width: 100%;
+    user-select: none;
+    text-align: left;
+    margin-top: 7rem;
+}
+
+table th {
+    height: 60px;
+    padding-left: 20px;
+    font-size: 1.1rem;
+}
+
+table td {
+    height: 40px;
+    padding-left: 20px;
+
+}
+
+.hospede-table tbody tr:nth-child(odd){
+    background-color: rgb(214, 211, 211);
+}
+
+
+.btn-container {
+    display: flex;
+    justify-content: flex-end;
+    margin-right: 2rem;
+    margin-top: 4rem;
+}
+
+
+
+
+
 
