Adicionar estilo a botões e reposicionar

--- a/src/css/home.css
+++ b/src/css/home.css
@@ -18,7 +18,7 @@ table {
     width: 100%;
     user-select: none;
     text-align: left;
-    margin-top: 7rem;
+    margin-top: 3rem;
 }
 
 table th {
@@ -42,10 +42,44 @@ table td {
     display: flex;
     justify-content: flex-end;
     margin-right: 2rem;
-    margin-top: 4rem;
+    margin-top: 3rem;
+}
+
+.btn-add {
+    padding: 12px 12px;
+    border-radius: 18px;
+    border: none;
+    box-shadow: 0px 2px 7px black;
+    background-color: rgb(52, 192, 52);
+    font-size: 14px;
+    font-weight: 500;
+
 }
 
 
+
+.btn-editar {
+    padding: 10px 10px;
+    border-radius: 18px;
+    border: none;
+    box-shadow: 0px 2px 7px black;
+    background-color: rgb(218, 140, 5);
+    font-size: 12px;
+    font-weight: 500;
+
+}
+
+
+.btn-deletar {
+    padding: 10px 10px;
+    border-radius: 18px;
+    border: none;
+    box-shadow: 0px 2px 7px black;
+    background-color: rgb(224, 14, 14);
+    font-size: 12px;
+    font-weight: 500;
+
+}
 
 
 
