--- a/src/css/model.css
+++ b/src/css/model.css
@@ -1,11 +1,46 @@
 .modals {
+    display : none;
     position: fixed;
-    width: 100%;
-    height: 100%;
     top: 0;
     left: 0;
-    opacity: 0;
-    z-index: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    justify-content: center;
+    align-items: center;
+    
 }
+
+
+.modal-content {
+    background-color: white;
+    padding: 20px;
+    border-radius: 20px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.model-ask {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 20px;
+    box-shadow: 0px 5px 7px black;
+}
+
+.modal-ask h2 {
+    color:blueviolet
+}
+
+
+.modal-add-form {
+    display:none
+
+}
+
 
 
