--- a/src/css/model.css
+++ b/src/css/model.css
@@ -29,11 +29,20 @@
     align-items: center;
     flex-direction: column;
     border-radius: 20px;
-    box-shadow: 0px 5px 7px black;
+    box-shadow: 0px 10px 7px black;
+    padding: 0 10px
 }
 
 .modal-ask h2 {
-    color:blueviolet
+    color:blueviolet;
+    margin-top: -5px ;
+    margin-bottom: 10px;
+
+}
+
+.modal-ask p {
+    margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 
@@ -42,5 +51,34 @@
 
 }
 
+.modal-btn-confirm {
+    padding: 10px 10px;
+    border-radius: 18px;
+    border: none;
+    box-shadow: 0px 2px 7px black;
+    background-color: rgb(52, 192, 52);
+    font-size: 12px;
+    font-weight: 500;
+
+}
+
+.modal-btn-close {
+    padding: 10px 10px;
+    border-radius: 18px;
+    border: none;
+    box-shadow: 0px 2px 7px black;
+    background-color:  rgb(224, 14, 14);
+    font-size: 12px;
+    font-weight: 500;
+}
 
 
+.btn-adicionar {
+    padding: 5px 5px;
+    border-radius: 10px;
+    border:none;
+    background-color: aquamarine;
+    box-shadow: 0px 2px 7px black;
+    font-size: 10px;
+    font-weight: 500;
+}
