--- a/src/css/home.css
+++ b/src/css/home.css
@@ -52,6 +52,7 @@ table td {
     background-color: rgb(52, 192, 52);
     font-size: 14px;
     font-weight: 500;
+    cursor: pointer;
 
 }
 
@@ -65,6 +66,7 @@ table td {
     background-color: rgb(218, 140, 5);
     font-size: 12px;
     font-weight: 500;
+    cursor: pointer;
 
 }
 
@@ -77,9 +79,22 @@ table td {
     background-color: rgb(224, 14, 14);
     font-size: 12px;
     font-weight: 500;
+    cursor: pointer;
 
 }
 
 
+.btn-add:hover{
+    transform: scale(1.05);
+    transition: 500ms linear ease-in-out;
+}
 
+.btn-deletar:hover {
+    transform: scale(1.05);
+    transition: 500ms linear ease-in-out;
+}
 
+.btn-editar:hover {
+    transform: scale(1.05);
+    transition: 500ms linear ease-in-out;
+}
